fix: adjust sidebar collapsed styles for top navbar and main wrapper layout

--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -189,8 +189,13 @@ body {
     color: #ffffff;
 }
 
-.sidebar.collapsed~.main-wrapper .top-navbar {
+.sidebar.collapsed~.top-navbar {
     left: var(--sidebar-width-collapsed);
+    width: calc(100% - var(--sidebar-width-collapsed));
+}
+
+.sidebar.collapsed~.main-wrapper {
+    margin-left: var(--sidebar-width-collapsed);
     width: calc(100% - var(--sidebar-width-collapsed));
 }
 
